Use a collection that can hold null values for groupByAttributes